--- a/app/src/main/res/layout/activity_view_server.xml
+++ b/app/src/main/res/layout/activity_view_server.xml
@@ -107,7 +107,7 @@
     </android.support.v7.widget.CardView>
 
     <Button
-        android:id="@+id/button_home"
+        android:id="@+id/button_create"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/card"
