--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3f51b5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#3c3d6c</color>
+    <color name="colorPrimaryDark">#3c3d6c</color>
+    <color name="colorAccent">#ff9933</color>
+    <color name="background"></color>
+    <color name="background_material_light">#3c3d6c</color>
+    <color name="black">#3c3d6c</color>
+    <color name="foreground_material_light">#ffffff</color>
 </resources>
