--- a/app/src/main/res/layout/list_server.xml
+++ b/app/src/main/res/layout/list_server.xml
@@ -112,9 +112,8 @@
                 android:id="@+id/accRemaining"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
                 android:layout_alignParentEnd="true"
-                android:layout_below="@+id/titleLocation"
-                android:layout_marginEnd="13dp"
                 android:text="Tersedia"
                 android:textColor="@android:color/holo_green_light" />
         </RelativeLayout>
