--- a/app/src/main/res/layout/activity_view_server.xml
+++ b/app/src/main/res/layout/activity_view_server.xml
@@ -15,8 +15,7 @@
 
     <android.support.v7.widget.CardView
         android:id="@+id/card"
-        android:layout_width="300dp"
-
+        android:layout_width="350dp"
         app:cardBackgroundColor="#292a64"
         android:layout_height="wrap_content"
         android:layout_below="@+id/label_location"
@@ -30,6 +29,7 @@
         <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginLeft="40dp"
             android:stretchColumns="1">
 
             <TableRow>
@@ -128,5 +128,6 @@
         android:text="Create"
         android:textColor="@android:color/background_light"
         android:textStyle="bold" />
+
 
 </RelativeLayout>
