--- a/app/src/main/res/layout/list_server.xml
+++ b/app/src/main/res/layout/list_server.xml
@@ -100,6 +100,7 @@
                 android:textSize="14sp" />
 
             <ImageView
+                android:visibility="invisible"
                 android:id="@+id/titleRemaining"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
