--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -39,12 +39,29 @@
             android:textColor="@color/cardview_light_background"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/lb_register"
+            android:text="Not have account ? "
+            android:layout_marginLeft="5dp"
+            android:textColor="@color/cardview_light_background"
+            android:layout_below="@id/txt_password"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/btn_register"
+            android:textColor="@color/colorAccent"
+            android:text="Register"
+            android:layout_below="@id/txt_password"
+            android:layout_toRightOf="@id/lb_register"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
         <Button
             android:id="@+id/btn_login"
             android:background="@color/colorAccent"
             android:text="Sign In"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="30dp"
             android:textColor="@color/cardview_light_background"
             android:layout_centerHorizontal="true"
             android:layout_below="@id/txt_password"
