--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -43,6 +43,7 @@
             android:id="@+id/lb_register"
             android:text="Not have account ? "
             android:layout_marginLeft="5dp"
+            android:visibility="invisible"
             android:textColor="@color/cardview_light_background"
             android:layout_below="@id/txt_password"
             android:layout_width="wrap_content"
@@ -52,6 +53,7 @@
             android:id="@+id/btn_register"
             android:textColor="@color/colorAccent"
             android:text="Register"
+            android:visibility="invisible"
             android:layout_below="@id/txt_password"
             android:layout_toRightOf="@id/lb_register"
             android:layout_width="wrap_content"
